--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -116,66 +116,66 @@
         <file alias="network_disabled">res/icons/dark/network_disabled.png</file>
         <file alias="proxy">res/icons/dark/proxy.png</file>
     </qresource>
-    <qresource prefix="/icons/legacy">
-        <file alias="bitcoin">res/icons/legacy/veles.png</file>
-        <file alias="address-book">res/icons/legacy/address-book.png</file>
-        <file alias="quit">res/icons/legacy/quit.png</file>
-        <file alias="send">res/icons/legacy/send.png</file>
-        <file alias="connect_0">res/icons/legacy/connect0.png</file>
-        <file alias="connect_1">res/icons/legacy/connect1.png</file>
-        <file alias="connect_2">res/icons/legacy/connect2.png</file>
-        <file alias="connect_3">res/icons/legacy/connect3.png</file>
-        <file alias="connect_4">res/icons/legacy/connect4.png</file>
-        <file alias="transaction_0">res/icons/legacy/transaction0.png</file>
-        <file alias="transaction_confirmed">res/icons/legacy/transaction2.png</file>
-        <file alias="transaction_conflicted">res/icons/legacy/transaction_conflicted.png</file>
-        <file alias="transaction_1">res/icons/legacy/clock1.png</file>
-        <file alias="transaction_2">res/icons/legacy/clock2.png</file>
-        <file alias="transaction_3">res/icons/legacy/clock3.png</file>
-        <file alias="transaction_4">res/icons/legacy/clock4.png</file>
-        <file alias="transaction_5">res/icons/legacy/clock5.png</file>
-        <file alias="eye">res/icons/legacy/eye.png</file>
-        <file alias="eye_minus">res/icons/legacy/eye_minus.png</file>
-        <file alias="eye_plus">res/icons/legacy/eye_plus.png</file>
-        <file alias="options">res/icons/legacy/configure.png</file>
-        <file alias="receiving_addresses">res/icons/legacy/receive.png</file>
-        <file alias="editpaste">res/icons/legacy/editpaste.png</file>
-        <file alias="editcopy">res/icons/legacy/editcopy.png</file>
-        <file alias="add">res/icons/legacy/add.png</file>
-        <file alias="edit">res/icons/legacy/edit.png</file>
-        <file alias="history">res/icons/legacy/history.png</file>
+    <qresource prefix="/icons/velesTheme">
+        <file alias="bitcoin">res/icons/velesTheme/veles.png</file>
+        <file alias="address-book">res/icons/velesTheme/address-book.png</file>
+        <file alias="quit">res/icons/velesTheme/quit.png</file>
+        <file alias="send">res/icons/velesTheme/send.png</file>
+        <file alias="connect_0">res/icons/velesTheme/connect0.png</file>
+        <file alias="connect_1">res/icons/velesTheme/connect1.png</file>
+        <file alias="connect_2">res/icons/velesTheme/connect2.png</file>
+        <file alias="connect_3">res/icons/velesTheme/connect3.png</file>
+        <file alias="connect_4">res/icons/velesTheme/connect4.png</file>
+        <file alias="transaction_0">res/icons/velesTheme/transaction0.png</file>
+        <file alias="transaction_confirmed">res/icons/velesTheme/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/velesTheme/transaction_conflicted.png</file>
+        <file alias="transaction_1">res/icons/velesTheme/clock1.png</file>
+        <file alias="transaction_2">res/icons/velesTheme/clock2.png</file>
+        <file alias="transaction_3">res/icons/velesTheme/clock3.png</file>
+        <file alias="transaction_4">res/icons/velesTheme/clock4.png</file>
+        <file alias="transaction_5">res/icons/velesTheme/clock5.png</file>
+        <file alias="eye">res/icons/velesTheme/eye.png</file>
+        <file alias="eye_minus">res/icons/velesTheme/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/velesTheme/eye_plus.png</file>
+        <file alias="options">res/icons/velesTheme/configure.png</file>
+        <file alias="receiving_addresses">res/icons/velesTheme/receive.png</file>
+        <file alias="editpaste">res/icons/velesTheme/editpaste.png</file>
+        <file alias="editcopy">res/icons/velesTheme/editcopy.png</file>
+        <file alias="add">res/icons/velesTheme/add.png</file>
+        <file alias="edit">res/icons/velesTheme/edit.png</file>
+        <file alias="history">res/icons/velesTheme/history.png</file>
         <!-- Dash -->
-        <file alias="masternodes">res/icons/legacy/masternodes.png</file>
+        <file alias="masternodes">res/icons/velesTheme/masternodes.png</file>
         <!--      -->
-        <file alias="smallUpArrow">res/icons/legacy/small_up_button_arrow.png</file>
-        <file alias="smallDownArrow">res/icons/legacy/small_down_button_arrow.png</file>
-        <file alias="overview">res/icons/legacy/overview.png</file>
-        <file alias="export">res/icons/legacy/export.png</file>
-        <file alias="synced">res/icons/legacy/synced.png</file>
-        <file alias="remove">res/icons/legacy/remove.png</file>
-        <file alias="tx_mined">res/icons/legacy/tx_mined.png</file>
-        <file alias="tx_input">res/icons/legacy/tx_input.png</file>
-        <file alias="tx_output">res/icons/legacy/tx_output.png</file>
-        <file alias="tx_inout">res/icons/legacy/tx_inout.png</file>
-        <file alias="lock_closed">res/icons/legacy/lock_closed.png</file>
-        <file alias="lock_open">res/icons/legacy/lock_open.png</file>
-        <file alias="key">res/icons/legacy/key.png</file>
-        <file alias="filesave">res/icons/legacy/filesave.png</file>
-        <file alias="debugwindow">res/icons/legacy/debugwindow.png</file>
-        <file alias="open">res/icons/legacy/open.png</file>
-        <file alias="info">res/icons/legacy/info.png</file>
-        <file alias="about">res/icons/legacy/about_veles.png</file>
-        <file alias="about_qt">res/icons/legacy/about_qt.png</file>
-        <file alias="verify">res/icons/legacy/verify.png</file>
-        <file alias="warning">res/icons/legacy/warning.png</file>
-        <file alias="fontbigger">res/icons/legacy/fontbigger.png</file>
-        <file alias="fontsmaller">res/icons/legacy/fontsmaller.png</file>
-        <file alias="prompticon">res/icons/legacy/chevron.png</file>
-        <file alias="transaction_abandoned">res/icons/legacy/transaction_abandoned.png</file>
-        <file alias="hd_enabled">res/icons/legacy/hd_enabled.png</file>
-        <file alias="hd_disabled">res/icons/legacy/hd_disabled.png</file>
-        <file alias="network_disabled">res/icons/legacy/network_disabled.png</file>
-        <file alias="proxy">res/icons/legacy/proxy.png</file>
+        <file alias="smallUpArrow">res/icons/velesTheme/small_up_button_arrow.png</file>
+        <file alias="smallDownArrow">res/icons/velesTheme/small_down_button_arrow.png</file>
+        <file alias="overview">res/icons/velesTheme/overview.png</file>
+        <file alias="export">res/icons/velesTheme/export.png</file>
+        <file alias="synced">res/icons/velesTheme/synced.png</file>
+        <file alias="remove">res/icons/velesTheme/remove.png</file>
+        <file alias="tx_mined">res/icons/velesTheme/tx_mined.png</file>
+        <file alias="tx_input">res/icons/velesTheme/tx_input.png</file>
+        <file alias="tx_output">res/icons/velesTheme/tx_output.png</file>
+        <file alias="tx_inout">res/icons/velesTheme/tx_inout.png</file>
+        <file alias="lock_closed">res/icons/velesTheme/lock_closed.png</file>
+        <file alias="lock_open">res/icons/velesTheme/lock_open.png</file>
+        <file alias="key">res/icons/velesTheme/key.png</file>
+        <file alias="filesave">res/icons/velesTheme/filesave.png</file>
+        <file alias="debugwindow">res/icons/velesTheme/debugwindow.png</file>
+        <file alias="open">res/icons/velesTheme/open.png</file>
+        <file alias="info">res/icons/velesTheme/info.png</file>
+        <file alias="about">res/icons/velesTheme/about_veles.png</file>
+        <file alias="about_qt">res/icons/velesTheme/about_qt.png</file>
+        <file alias="verify">res/icons/velesTheme/verify.png</file>
+        <file alias="warning">res/icons/velesTheme/warning.png</file>
+        <file alias="fontbigger">res/icons/velesTheme/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/velesTheme/fontsmaller.png</file>
+        <file alias="prompticon">res/icons/velesTheme/chevron.png</file>
+        <file alias="transaction_abandoned">res/icons/velesTheme/transaction_abandoned.png</file>
+        <file alias="hd_enabled">res/icons/velesTheme/hd_enabled.png</file>
+        <file alias="hd_disabled">res/icons/velesTheme/hd_disabled.png</file>
+        <file alias="network_disabled">res/icons/velesTheme/network_disabled.png</file>
+        <file alias="proxy">res/icons/velesTheme/proxy.png</file>
     </qresource>
     <qresource prefix="/movies">
         <file alias="spinner-000">res/movies/spinner-000.png</file>
@@ -230,12 +230,12 @@
         <file alias="header_bg">res/images/dark/header_bg.png</file>
         <file alias="bg-pattern">res/images/dark/bg-pattern.png</file>
     </qresource>
-    <qresource prefix="/images/legacy">
-        <file alias="splash">res/images/legacy/splash.png</file>
-        <file alias="splash_testnet">res/images/legacy/splash_testnet.png</file>
-        <file alias="splash_prerelease">res/images/legacy/splash_prerelease.png</file>
-        <file alias="header_bg">res/images/legacy/header_bg.png</file>
-        <file alias="bg-pattern">res/images/legacy/bg-pattern.png</file>
+    <qresource prefix="/images/velesTheme">
+        <file alias="splash">res/images/velesTheme/splash.png</file>
+        <file alias="splash_testnet">res/images/velesTheme/splash_testnet.png</file>
+        <file alias="splash_prerelease">res/images/velesTheme/splash_prerelease.png</file>
+        <file alias="header_bg">res/images/velesTheme/header_bg.png</file>
+        <file alias="bg-pattern">res/images/velesTheme/bg-pattern.png</file>
     </qresource>
     <qresource prefix="/fonts">
         <file alias="jura">res/fonts/jura.ttf</file>
@@ -248,7 +248,7 @@
     <qresource prefix="/css">
         <file alias="dark">res/css/dark.css</file>
         <file alias="light">res/css/light.css</file>
-        <file alias="legacy">res/css/legacy.css</file>
+        <file alias="velesTheme">res/css/velesTheme.css</file>
     </qresource>
     <!-- VELES END -->
 </RCC>
