--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,62 +1,62 @@
 <!DOCTYPE RCC><RCC version="1.0">
-    <qresource prefix="/icons/light">
-        <file alias="bitcoin">res/icons/light/veles.png</file>
-        <file alias="address-book">res/icons/light/address-book.png</file>
-        <file alias="quit">res/icons/light/quit.png</file>
-        <file alias="send">res/icons/light/send.png</file>
-        <file alias="connect_0">res/icons/light/connect0.png</file>
-        <file alias="connect_1">res/icons/light/connect1.png</file>
-        <file alias="connect_2">res/icons/light/connect2.png</file>
-        <file alias="connect_3">res/icons/light/connect3.png</file>
-        <file alias="connect_4">res/icons/light/connect4.png</file>
-        <file alias="transaction_0">res/icons/light/transaction0.png</file>
-        <file alias="transaction_confirmed">res/icons/light/transaction2.png</file>
-        <file alias="transaction_conflicted">res/icons/light/transaction_conflicted.png</file>
-        <file alias="transaction_1">res/icons/light/clock1.png</file>
-        <file alias="transaction_2">res/icons/light/clock2.png</file>
-        <file alias="transaction_3">res/icons/light/clock3.png</file>
-        <file alias="transaction_4">res/icons/light/clock4.png</file>
-        <file alias="transaction_5">res/icons/light/clock5.png</file>
-        <file alias="eye">res/icons/light/eye.png</file>
-        <file alias="eye_minus">res/icons/light/eye_minus.png</file>
-        <file alias="eye_plus">res/icons/light/eye_plus.png</file>
-        <file alias="options">res/icons/light/configure.png</file>
-        <file alias="receiving_addresses">res/icons/light/receive.png</file>
-        <file alias="editpaste">res/icons/light/editpaste.png</file>
-        <file alias="editcopy">res/icons/light/editcopy.png</file>
-        <file alias="add">res/icons/light/add.png</file>
-        <file alias="edit">res/icons/light/edit.png</file>
-        <file alias="history">res/icons/light/history.png</file>
+    <qresource prefix="/icons/lightTheme">
+        <file alias="bitcoin">res/icons/lightTheme/veles.png</file>
+        <file alias="address-book">res/icons/lightTheme/address-book.png</file>
+        <file alias="quit">res/icons/lightTheme/quit.png</file>
+        <file alias="send">res/icons/lightTheme/send.png</file>
+        <file alias="connect_0">res/icons/lightTheme/connect0.png</file>
+        <file alias="connect_1">res/icons/lightTheme/connect1.png</file>
+        <file alias="connect_2">res/icons/lightTheme/connect2.png</file>
+        <file alias="connect_3">res/icons/lightTheme/connect3.png</file>
+        <file alias="connect_4">res/icons/lightTheme/connect4.png</file>
+        <file alias="transaction_0">res/icons/lightTheme/transaction0.png</file>
+        <file alias="transaction_confirmed">res/icons/lightTheme/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/lightTheme/transaction_conflicted.png</file>
+        <file alias="transaction_1">res/icons/lightTheme/clock1.png</file>
+        <file alias="transaction_2">res/icons/lightTheme/clock2.png</file>
+        <file alias="transaction_3">res/icons/lightTheme/clock3.png</file>
+        <file alias="transaction_4">res/icons/lightTheme/clock4.png</file>
+        <file alias="transaction_5">res/icons/lightTheme/clock5.png</file>
+        <file alias="eye">res/icons/lightTheme/eye.png</file>
+        <file alias="eye_minus">res/icons/lightTheme/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/lightTheme/eye_plus.png</file>
+        <file alias="options">res/icons/lightTheme/configure.png</file>
+        <file alias="receiving_addresses">res/icons/lightTheme/receive.png</file>
+        <file alias="editpaste">res/icons/lightTheme/editpaste.png</file>
+        <file alias="editcopy">res/icons/lightTheme/editcopy.png</file>
+        <file alias="add">res/icons/lightTheme/add.png</file>
+        <file alias="edit">res/icons/lightTheme/edit.png</file>
+        <file alias="history">res/icons/lightTheme/history.png</file>
         <!-- Dash -->
-        <file alias="masternodes">res/icons/light/masternodes.png</file>
+        <file alias="masternodes">res/icons/lightTheme/masternodes.png</file>
         <!--      -->
-        <file alias="overview">res/icons/light/overview.png</file>
-        <file alias="export">res/icons/light/export.png</file>
-        <file alias="synced">res/icons/light/synced.png</file>
-        <file alias="remove">res/icons/light/remove.png</file>
-        <file alias="tx_mined">res/icons/light/tx_mined.png</file>
-        <file alias="tx_input">res/icons/light/tx_input.png</file>
-        <file alias="tx_output">res/icons/light/tx_output.png</file>
-        <file alias="tx_inout">res/icons/light/tx_inout.png</file>
-        <file alias="lock_closed">res/icons/light/lock_closed.png</file>
-        <file alias="lock_open">res/icons/light/lock_open.png</file>
-        <file alias="key">res/icons/light/key.png</file>
-        <file alias="filesave">res/icons/light/filesave.png</file>
-        <file alias="debugwindow">res/icons/light/debugwindow.png</file>
-        <file alias="open">res/icons/light/open.png</file>
-        <file alias="info">res/icons/light/info.png</file>
-        <file alias="about">res/icons/light/about_veles.png</file>
-        <file alias="about_qt">res/icons/light/about_qt.png</file>
-        <file alias="verify">res/icons/light/verify.png</file>
-        <file alias="warning">res/icons/light/warning.png</file>
-        <file alias="fontbigger">res/icons/light/fontbigger.png</file>
-        <file alias="fontsmaller">res/icons/light/fontsmaller.png</file>
-        <file alias="prompticon">res/icons/light/chevron.png</file>
-        <file alias="transaction_abandoned">res/icons/light/transaction_abandoned.png</file>
-        <file alias="hd_enabled">res/icons/light/hd_enabled.png</file>
-        <file alias="hd_disabled">res/icons/light/hd_disabled.png</file>
-        <file alias="network_disabled">res/icons/light/network_disabled.png</file>
-        <file alias="proxy">res/icons/light/proxy.png</file>
+        <file alias="overview">res/icons/lightTheme/overview.png</file>
+        <file alias="export">res/icons/lightTheme/export.png</file>
+        <file alias="synced">res/icons/lightTheme/synced.png</file>
+        <file alias="remove">res/icons/lightTheme/remove.png</file>
+        <file alias="tx_mined">res/icons/lightTheme/tx_mined.png</file>
+        <file alias="tx_input">res/icons/lightTheme/tx_input.png</file>
+        <file alias="tx_output">res/icons/lightTheme/tx_output.png</file>
+        <file alias="tx_inout">res/icons/lightTheme/tx_inout.png</file>
+        <file alias="lock_closed">res/icons/lightTheme/lock_closed.png</file>
+        <file alias="lock_open">res/icons/lightTheme/lock_open.png</file>
+        <file alias="key">res/icons/lightTheme/key.png</file>
+        <file alias="filesave">res/icons/lightTheme/filesave.png</file>
+        <file alias="debugwindow">res/icons/lightTheme/debugwindow.png</file>
+        <file alias="open">res/icons/lightTheme/open.png</file>
+        <file alias="info">res/icons/lightTheme/info.png</file>
+        <file alias="about">res/icons/lightTheme/about_veles.png</file>
+        <file alias="about_qt">res/icons/lightTheme/about_qt.png</file>
+        <file alias="verify">res/icons/lightTheme/verify.png</file>
+        <file alias="warning">res/icons/lightTheme/warning.png</file>
+        <file alias="fontbigger">res/icons/lightTheme/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/lightTheme/fontsmaller.png</file>
+        <file alias="prompticon">res/icons/lightTheme/chevron.png</file>
+        <file alias="transaction_abandoned">res/icons/lightTheme/transaction_abandoned.png</file>
+        <file alias="hd_enabled">res/icons/lightTheme/hd_enabled.png</file>
+        <file alias="hd_disabled">res/icons/lightTheme/hd_disabled.png</file>
+        <file alias="network_disabled">res/icons/lightTheme/network_disabled.png</file>
+        <file alias="proxy">res/icons/lightTheme/proxy.png</file>
     </qresource>
     <qresource prefix="/icons/dark">
         <file alias="bitcoin">res/icons/dark/veles.png</file>
@@ -216,12 +216,12 @@
         <file alias="spinner-035">res/movies/spinner-035.png</file>
     </qresource>
     <!-- VELES BEGIN -->
-    <qresource prefix="/images/light">
-        <file alias="splash">res/images/light/splash.png</file>
-        <file alias="splash_testnet">res/images/light/splash_testnet.png</file>
-        <file alias="splash_prerelease">res/images/light/splash_prerelease.png</file>
-        <file alias="header_bg">res/images/light/header_bg.png</file>
-        <file alias="bg-pattern">res/images/light/bg-pattern.png</file>
+    <qresource prefix="/images/lightTheme">
+        <file alias="splash">res/images/lightTheme/splash.png</file>
+        <file alias="splash_testnet">res/images/lightTheme/splash_testnet.png</file>
+        <file alias="splash_prerelease">res/images/lightTheme/splash_prerelease.png</file>
+        <file alias="header_bg">res/images/lightTheme/header_bg.png</file>
+        <file alias="bg-pattern">res/images/lightTheme/bg-pattern.png</file>
     </qresource>
     <qresource prefix="/images/dark">
         <file alias="splash">res/images/dark/splash.png</file>
@@ -247,7 +247,7 @@
     </qresource>
     <qresource prefix="/css">
         <file alias="dark">res/css/dark.css</file>
-        <file alias="light">res/css/light.css</file>
+        <file alias="lightTheme">res/css/lightTheme.css</file>
         <file alias="velesTheme">res/css/velesTheme.css</file>
     </qresource>
     <!-- VELES END -->
