--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -58,63 +58,63 @@
         <file alias="network_disabled">res/icons/lightTheme/network_disabled.png</file>
         <file alias="proxy">res/icons/lightTheme/proxy.png</file>
     </qresource>
-    <qresource prefix="/icons/dark">
-        <file alias="bitcoin">res/icons/dark/veles.png</file>
-        <file alias="address-book">res/icons/dark/address-book.png</file>
-        <file alias="quit">res/icons/dark/quit.png</file>
-        <file alias="send">res/icons/dark/send.png</file>
-        <file alias="connect_0">res/icons/dark/connect0.png</file>
-        <file alias="connect_1">res/icons/dark/connect1.png</file>
-        <file alias="connect_2">res/icons/dark/connect2.png</file>
-        <file alias="connect_3">res/icons/dark/connect3.png</file>
-        <file alias="connect_4">res/icons/dark/connect4.png</file>
-        <file alias="transaction_0">res/icons/dark/transaction0.png</file>
-        <file alias="transaction_confirmed">res/icons/dark/transaction2.png</file>
-        <file alias="transaction_conflicted">res/icons/dark/transaction_conflicted.png</file>
-        <file alias="transaction_1">res/icons/dark/clock1.png</file>
-        <file alias="transaction_2">res/icons/dark/clock2.png</file>
-        <file alias="transaction_3">res/icons/dark/clock3.png</file>
-        <file alias="transaction_4">res/icons/dark/clock4.png</file>
-        <file alias="transaction_5">res/icons/dark/clock5.png</file>
-        <file alias="eye">res/icons/dark/eye.png</file>
-        <file alias="eye_minus">res/icons/dark/eye_minus.png</file>
-        <file alias="eye_plus">res/icons/dark/eye_plus.png</file>
-        <file alias="options">res/icons/dark/configure.png</file>
-        <file alias="receiving_addresses">res/icons/dark/receive.png</file>
-        <file alias="editpaste">res/icons/dark/editpaste.png</file>
-        <file alias="editcopy">res/icons/dark/editcopy.png</file>
-        <file alias="add">res/icons/dark/add.png</file>
-        <file alias="edit">res/icons/dark/edit.png</file>
-        <file alias="history">res/icons/dark/history.png</file>
+    <qresource prefix="/icons/darkTheme">
+        <file alias="bitcoin">res/icons/darkTheme/veles.png</file>
+        <file alias="address-book">res/icons/darkTheme/address-book.png</file>
+        <file alias="quit">res/icons/darkTheme/quit.png</file>
+        <file alias="send">res/icons/darkTheme/send.png</file>
+        <file alias="connect_0">res/icons/darkTheme/connect0.png</file>
+        <file alias="connect_1">res/icons/darkTheme/connect1.png</file>
+        <file alias="connect_2">res/icons/darkTheme/connect2.png</file>
+        <file alias="connect_3">res/icons/darkTheme/connect3.png</file>
+        <file alias="connect_4">res/icons/darkTheme/connect4.png</file>
+        <file alias="transaction_0">res/icons/darkTheme/transaction0.png</file>
+        <file alias="transaction_confirmed">res/icons/darkTheme/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/darkTheme/transaction_conflicted.png</file>
+        <file alias="transaction_1">res/icons/darkTheme/clock1.png</file>
+        <file alias="transaction_2">res/icons/darkTheme/clock2.png</file>
+        <file alias="transaction_3">res/icons/darkTheme/clock3.png</file>
+        <file alias="transaction_4">res/icons/darkTheme/clock4.png</file>
+        <file alias="transaction_5">res/icons/darkTheme/clock5.png</file>
+        <file alias="eye">res/icons/darkTheme/eye.png</file>
+        <file alias="eye_minus">res/icons/darkTheme/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/darkTheme/eye_plus.png</file>
+        <file alias="options">res/icons/darkTheme/configure.png</file>
+        <file alias="receiving_addresses">res/icons/darkTheme/receive.png</file>
+        <file alias="editpaste">res/icons/darkTheme/editpaste.png</file>
+        <file alias="editcopy">res/icons/darkTheme/editcopy.png</file>
+        <file alias="add">res/icons/darkTheme/add.png</file>
+        <file alias="edit">res/icons/darkTheme/edit.png</file>
+        <file alias="history">res/icons/darkTheme/history.png</file>
         <!-- Dash -->
-        <file alias="masternodes">res/icons/dark/masternodes.png</file>
-        <file alias="overview">res/icons/dark/overview.png</file>
-        <file alias="export">res/icons/dark/export.png</file>
-        <file alias="synced">res/icons/dark/synced.png</file>
-        <file alias="remove">res/icons/dark/remove.png</file>
-        <file alias="tx_mined">res/icons/dark/tx_mined.png</file>
-        <file alias="tx_input">res/icons/dark/tx_input.png</file>
-        <file alias="tx_output">res/icons/dark/tx_output.png</file>
-        <file alias="tx_inout">res/icons/dark/tx_inout.png</file>
-        <file alias="lock_closed">res/icons/dark/lock_closed.png</file>
-        <file alias="lock_open">res/icons/dark/lock_open.png</file>
-        <file alias="key">res/icons/dark/key.png</file>
-        <file alias="filesave">res/icons/dark/filesave.png</file>
-        <file alias="debugwindow">res/icons/dark/debugwindow.png</file>
-        <file alias="open">res/icons/dark/open.png</file>
-        <file alias="info">res/icons/dark/info.png</file>
-        <file alias="about">res/icons/dark/about_veles.png</file>
-        <file alias="about_qt">res/icons/dark/about_qt.png</file>
-        <file alias="verify">res/icons/dark/verify.png</file>
-        <file alias="warning">res/icons/dark/warning.png</file>
-        <file alias="fontbigger">res/icons/dark/fontbigger.png</file>
-        <file alias="fontsmaller">res/icons/dark/fontsmaller.png</file>
-        <file alias="prompticon">res/icons/dark/chevron.png</file>
-        <file alias="transaction_abandoned">res/icons/dark/transaction_abandoned.png</file>
-        <file alias="hd_enabled">res/icons/dark/hd_enabled.png</file>
-        <file alias="hd_disabled">res/icons/dark/hd_disabled.png</file>
-        <file alias="network_disabled">res/icons/dark/network_disabled.png</file>
-        <file alias="proxy">res/icons/dark/proxy.png</file>
+        <file alias="masternodes">res/icons/darkTheme/masternodes.png</file>
+        <file alias="overview">res/icons/darkTheme/overview.png</file>
+        <file alias="export">res/icons/darkTheme/export.png</file>
+        <file alias="synced">res/icons/darkTheme/synced.png</file>
+        <file alias="remove">res/icons/darkTheme/remove.png</file>
+        <file alias="tx_mined">res/icons/darkTheme/tx_mined.png</file>
+        <file alias="tx_input">res/icons/darkTheme/tx_input.png</file>
+        <file alias="tx_output">res/icons/darkTheme/tx_output.png</file>
+        <file alias="tx_inout">res/icons/darkTheme/tx_inout.png</file>
+        <file alias="lock_closed">res/icons/darkTheme/lock_closed.png</file>
+        <file alias="lock_open">res/icons/darkTheme/lock_open.png</file>
+        <file alias="key">res/icons/darkTheme/key.png</file>
+        <file alias="filesave">res/icons/darkTheme/filesave.png</file>
+        <file alias="debugwindow">res/icons/darkTheme/debugwindow.png</file>
+        <file alias="open">res/icons/darkTheme/open.png</file>
+        <file alias="info">res/icons/darkTheme/info.png</file>
+        <file alias="about">res/icons/darkTheme/about_veles.png</file>
+        <file alias="about_qt">res/icons/darkTheme/about_qt.png</file>
+        <file alias="verify">res/icons/darkTheme/verify.png</file>
+        <file alias="warning">res/icons/darkTheme/warning.png</file>
+        <file alias="fontbigger">res/icons/darkTheme/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/darkTheme/fontsmaller.png</file>
+        <file alias="prompticon">res/icons/darkTheme/chevron.png</file>
+        <file alias="transaction_abandoned">res/icons/darkTheme/transaction_abandoned.png</file>
+        <file alias="hd_enabled">res/icons/darkTheme/hd_enabled.png</file>
+        <file alias="hd_disabled">res/icons/darkTheme/hd_disabled.png</file>
+        <file alias="network_disabled">res/icons/darkTheme/network_disabled.png</file>
+        <file alias="proxy">res/icons/darkTheme/proxy.png</file>
     </qresource>
     <qresource prefix="/icons/velesTheme">
         <file alias="bitcoin">res/icons/velesTheme/veles.png</file>
@@ -223,12 +223,12 @@
         <file alias="header_bg">res/images/lightTheme/header_bg.png</file>
         <file alias="bg-pattern">res/images/lightTheme/bg-pattern.png</file>
     </qresource>
-    <qresource prefix="/images/dark">
-        <file alias="splash">res/images/dark/splash.png</file>
-        <file alias="splash_testnet">res/images/dark/splash_testnet.png</file>
-        <file alias="splash_prerelease">res/images/dark/splash_prerelease.png</file>
-        <file alias="header_bg">res/images/dark/header_bg.png</file>
-        <file alias="bg-pattern">res/images/dark/bg-pattern.png</file>
+    <qresource prefix="/images/darkTheme">
+        <file alias="splash">res/images/darkTheme/splash.png</file>
+        <file alias="splash_testnet">res/images/darkTheme/splash_testnet.png</file>
+        <file alias="splash_prerelease">res/images/darkTheme/splash_prerelease.png</file>
+        <file alias="header_bg">res/images/darkTheme/header_bg.png</file>
+        <file alias="bg-pattern">res/images/darkTheme/bg-pattern.png</file>
     </qresource>
     <qresource prefix="/images/velesTheme">
         <file alias="splash">res/images/velesTheme/splash.png</file>
@@ -246,7 +246,7 @@
         <file alias="warning">res/icons/warning.png</file>
     </qresource>
     <qresource prefix="/css">
-        <file alias="dark">res/css/dark.css</file>
+        <file alias="darkTheme">res/css/darkTheme.css</file>
         <file alias="lightTheme">res/css/lightTheme.css</file>
         <file alias="velesTheme">res/css/velesTheme.css</file>
     </qresource>
