Qt: fix comments in css files

--- a/src/qt/res/css/lightTheme.css
+++ b/src/qt/res/css/lightTheme.css
@@ -1,5 +1,5 @@
 /**
- * The Veles Core Qt GUI Light theme stylesheet.
+ * The Veles Core Qt GUI Light Theme stylesheet.
  *
  * Copyright (c) 2018-2019 The Veles Core developers
  *
