--- a/src/qt/res/css/velesTheme.css
+++ b/src/qt/res/css/velesTheme.css
@@ -1,7 +1,7 @@
 /******************************************************************************/
 /******************************************************************************/
 /*
- * The Veles Core Qt GUI Veles-theme stylesheet.
+ * The Veles Core Qt GUI Veles Theme stylesheet.
  *
  * Copyright (c) 2018-2019 The Veles Core developers
  *
