--- a/src/qt/res/css/velesTheme.css
+++ b/src/qt/res/css/velesTheme.css
@@ -109,6 +109,7 @@ QAbstractSpinBox::up-button {
     padding-right: 1px;
     padding-left: 5px;
     padding-top: 2px;
+		border-left: 1px solid rgba(17, 17, 17, 0.5);
 		/*border-top: 2px solid rgba(228, 185, 156, 0.7);*/
 }
 
@@ -131,6 +132,7 @@ QAbstractSpinBox::down-button {
 		padding-left: 5px;
     padding-bottom: 2px;
 		border-top: 1px solid rgba(17, 17, 17, 0.5);
+		border-left: 1px solid rgba(17, 17, 17, 0.5);
 		/*border-bottom: 2px solid rgba(228, 185, 156, 0.7);*/
 }
 
@@ -485,6 +487,7 @@ QPushButton#clearButton:hover {
 	background-color: rgba(201, 67, 63, 0.7);
 	border: 1px solid rgba(17, 17, 17, 0.8);
 }
+
 
 QPushButton#cancelButton:pressed,
 QPushButton#removeRequestButton:pressed,
